# Awesome-FastAPI-Boilerplate

./: .gitignore  DOCUMENTATION.md  LICENSE.md  README.md  alembic.ini  initial_data.py  mini-blog.db  posts_erd_diagram.mwb  posts_erd_diagram.mwb.bak  pyproject.toml  record.json  record_2.json  run.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  comments.py  companies.py  surveys.py  users.py
app/core/: __init__.py  config.py  security.py
app/crud/: __init__.py  base.py  comment.py  company.py  post.py  survey.py  user.py
app/database/: __init__.py  initialize.py  session.py
app/models/: __init__.py  comment.py  company.py  post.py  survey.py  user.py
app/schemas/: __init__.py  caveats.py  comment.py  company.py  post.py  survey.py  token.py  user.py
app/utils/: __init__.py  parsers.py
migrations/: env.py
migrations/versions/: 3f9886d3619d_first_commit.py
